# Transformer-HandwrittenFromZero

./: README.md  inference.py  model.py  pyproject.toml  train.py
RoPE/: __init__.py  rope_encoding.py
flash_attention/: FlashAttentionDesc.md  flash_attention_kernel.cu  flash_attention_test.py  setup.py  simple_test.py
flash_attention/flash_attention/: __init__.py  flash_attention.cpp
grouped_query_attention/: GQA.py  __init__.py
kv_cache/: __init__.py  kv_cache.py  kv_cache_nvtx.py
linear_attention/: LinearAttention.py  __init__.py
naive_attention/: train.py
naive_attention/data/: get_dataset.py
paged_attention/: PagedAttentionDesc.md  paged_attention_kernel.cu  setup.py
paged_attention/paged_attention/: __init__.py  paged_attention.cpp
pytorch_native/: inference.py  train.py
pytorch_native/data/: get_dataset.py
sparse_attention/: SparseAttention.py  __init__.py
test/: test_flash_attention.py  test_grouped_query_attention.py  test_kv_cache.py  test_kv_cache_nvtx.py  test_linear_attention.py  test_paged_attention.py  test_paged_attention_nvtx.py  test_rope_encoding.py  test_sparse_attention.py
