[project]
name = "Transformer-HandwrittenFromZero"
version = "0.1.0"
description = "Handwritten project of transformer from scratch"
authors = [{name = "Nethan Hu", email = "r1qianhu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
]