[project]
name = "Transformer-HandwrittenFromZero"
version = "0.1.0"
description = "Handwritten project of transformer from scratch"
authors = [{name = "Nethan Hu", email = "r1qianhu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "requests>=2.31.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
profiling = [
    "matplotlib>=3.10.1",
    "torch-tb-profiler>=0.4.0",
    "tensorboard>=2.0.0",
    "nvtx>=0.2.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "naive_attention",
    "flash_attention",
    "kv_cache",
    "grouped_query_attention",
    "linear_attention",
    "sparse_attention",
    "RoPE",
    "paged_attention"
]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"